--- a/TestTask/registation/templates/login.html
+++ b/TestTask/registation/templates/login.html
@@ -22,8 +22,8 @@
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <a href="https://t.me/registration_for_site_bot">Создать аккаунт</a><br><br>
-                    <button type="submit" class="btn btn-primary btn-block">Вход</button>
+                    <a href="https://t.me/registration_for_site_bot">Створити акаунт</a><br><br>
+                    <button type="submit" class="btn btn-primary btn-block">Вхід</button>
 
                     <!--          <div class="divider d-flex align-items-center my-4">-->
                     <!--            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>-->
