--- a/TestTask/registation/templates/index.html
+++ b/TestTask/registation/templates/index.html
@@ -77,13 +77,13 @@
 </head>
 <body>
 	<div class="container">
-		<h1>User Profile</h1>
-		<img class="profile-pic" src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp" alt="Profile Picture">
+		<h1>Профіль користувача</h1>
+		<img class="profile-pic" src="media/{{ photo_profile }}" alt="Profile Picture">
 		<div class="user-info">
-			<p class="username">@ChornyiYaroslav</p>
-			<p>Yaroslav</p>
+			<p class="username">@{{ username }}</p>
+			<p>{{ full_name }}</p>
 		</div>
-		<button class="logout-btn" onclick="window.location.href='/logout'">Logout</button>
+		<button class="logout-btn" onclick="window.location.href='{% url 'exit' %}'">Logout</button>
 	</div>
 </body>
 </html>
@@ -94,13 +94,11 @@
     <title>Main</title>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <style>
-      /* Set background color */
       body {
         background-color: #f5f5f5;
         font-family: 'Roboto', sans-serif;
       }
 
-      /* Center the buttons */
       #button-container {
         display: flex;
         justify-content: center;
@@ -108,7 +106,6 @@
         height: 100vh;
       }
 
-      /* Style the buttons */
       button {
         margin: 10px;
         padding: 10px 20px;
@@ -124,12 +121,10 @@
         letter-spacing: 1px;
       }
 
-      /* Hover effect for buttons */
       button:hover {
         box-shadow: 0px 3px 0px #3E8E41;
       }
 
-      /* Style for the header text */
       h1 {
         color: #000000;
         text-align: center;
@@ -140,7 +135,6 @@
         letter-spacing: 2px;
       }
 
-      /* Style for the subheader text */
       h2 {
         color: #000000;
         text-align: center;
@@ -150,7 +144,6 @@
         letter-spacing: 1px;
       }
 
-      /* Container for the particle animation */
       #particles-js {
         position: absolute;
         top: 0;
