--- a/TestTask/registation/templates/login.html
+++ b/TestTask/registation/templates/login.html
@@ -19,6 +19,7 @@
                      class="img-fluid" alt="Phone image">
             </div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+                <h1>Вхід</h1><br>
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
